<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShopSmarter</string>
    <string name="title_activity_maps">OutdoorMapActivity</string>
    <string name="showGPS">Show My Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="title_indoor_map_activity">IndoorMapActivity</string>
    <string name="map_heading">Indoor Map</string>
    <string name="list_heading">Shopping List</string>
    <string name="name">name</string>
    <string name="accept">Accept</string>
    <string name="brand">brand</string>
    <string name="color">color</string>
    <string name="quantity">1</string>
    <string name="add">Add item</string>
    <string name="submit">Submit</string>
    <string name="distRange">Distance Range (km):</string>
    <string name="budget">Budget(€):</string>
    <string name="cancel">Cancel</string>
    <string name="get">Get</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_request">Request Activity</string>
    <string name="title_activity_shoppinglist">To shop Activity</string>
    <string name="title_activity_finalresponse">Final Response Activity</string>
    <string name="status">status</string>
    <string name="details">Details</string>
    <string name="title_activity_outdoor_map">Outdoor Map Activity</string>
    <string name="title_activity_details_list">Details Activity</string>
    <string name="title_activity_indoor_map">Indoor Map Activity</string>
    <string name="title_activity_prepare_indoor_map">Loading Indoor Map Activity</string>
    <string name="title_activity_voice_recognition_list">Voice Recognition Fill List Activity</string>
    <string name="back">Back</string>
    <string name="hello">Hello</string>
    <string name="voice">Try again</string>
    <string name="title_overview_store">by market</string>
    <string name="not_yet">not yet</string>
    <string name="overview_alphabetically">Alphabetical overview</string>
    <string name="store_products_view">Shoppinglist for</string>
    <string name="actionbar_add_new_product">+ Product </string>
    <string name="popup_button_clear_store_list">delete market list</string>
    <string name="label_add_new_product_quantity">Quantity:</string>
    <string name="label_add_new_product_unit">Units:</string>
    <string name="label_add_new_product_name">Name::</string>
    <string name="label_add_new_product_store">Market:</string>
    <string name="label_add_new_store_name">Name:</string>
    <string name="label_add_new_unit_name">Name:</string>
    <string name="label_add_new_favoritelist_name">Name:</string>
    <string name="button_confirm_adding">Add</string>
    <string name="title_add_new_product">Add product to shoppinglist</string>
    <string name="title_add_new_product_to_favorite">Add product to shoppinglist</string>
    <string name="popup_button_delete">delete</string>
    <string name="popup_button_change">edit</string>
    <string name="actionbar_options">Settings</string>
    <string name="actionbar_delete_shoppinglist">delete shoppinglist</string>
    <string name="actionbar_manage_stores">manage markets</string>
    <string name="actionbar_share_list">share list</string>
    <string name="actionbar_manage_units">manage units</string>
    <string name="label_view_type">view:</string>
    <string name="radio_button_view_type_store">order by market</string>
    <string name="radio_button_view_type_alphabetically">alphabetical</string>
    <string name="title_overview_alphabetical">alphabetical</string>
    <string name="title_edit_product">edit product</string>
    <string name="icon_description_checked">already bought</string>
    <string name="title_manage_stores">manage stores</string>
    <string name="title_manage_units">manage units</string>
    <string name="actionbar_manage_favorites">Manage favorites</string>
    <string name="title_manage_favorites">Manage favorites</string>
    <string name="actionbar_add_new_store">+ Market</string>
    <string name="actionbar_add_new_unit">+ Unit</string>
    <string name="title_add_store">add market</string>
    <string name="title_edit_store">edit market</string>
    <string name="title_add_unit">add unit</string>
    <string name="title_edit_unit">edit unit</string>
    <string name="title_add_favoritelist">add favorite list</string>
    <string name="title_edit_name_favoritelist">edit favorite name</string>
    <string name="button_text_save">save</string>
    <string name="button_add_to_history">move to history</string>
    <string name="title_history">History</string>
    <string name="actionbar_delete_history">delete history</string>
    <string name="actionbar_show_history">show history</string>
    <string name="actionbar_add_favorite_list">+ list</string>
    <string name="popup_button_change_favoritelist_products">edit content</string>
    <string name="popup_button_change_favorite_name">edit name</string>
    <string name="popup_button_add_favoritelist_to_shoppinglist">add list to shoppinglist</string>
    <string name="export_at_store">at</string>
    <string name="google_docs">Google Drive</string>
    <string name="export_email_current_shoppinglist">the current shoppinglist</string>
    <string name="widget_title">Shoppinglist</string>
    <string name="widget_at_which_store">at</string>
    <string name="widget_image_checkbox_description">bought?</string>
    <string name="widget_image_stripline_description">stripline</string>
    <string name="export_google_drive_title">Google Drive export</string>
    <string name="export_google_drive_file_name">Filename:</string>
    <string name="export_google_button_export">export</string>
    <string name="import_google_button">import</string>
    <string name="import_google_drive_title">Google Drive import</string>
    <string name="popup_google_import_file_title">select shoppinglist …</string>
    <string name="button_abort">Cancel</string>
    <string name="sqlstatement_not_specified">not specified</string>
    <string name="sqlstatement_liter">l</string>
    <string name="sqlstatement_kilogram">kg</string>
    <string name="sqlstatement_packets">lot</string>
    <string name="sqlstatement_gram">g</string>
    <string name="pref_display">Display</string>
    <string name="pref_list_type">List type</string>
    <string name="pref_list_type_sum">Changes default displaying of your lists</string>
    <string name="button_submit_to_server">Submit list</string>
</resources>