<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    >

     <TextView
        android:id="@+id/status_product"
        android:layout_width="0sp"
       android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/brown"
        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="italic"
         android:textSize="20dp"
         android:typeface="sans" />
    <AutoCompleteTextView
        android:id="@+id/brand_product"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="text"
        android:textColor="@color/brown"
        android:hint="@string/brand"
        android:completionThreshold="1"
        android:imeOptions="actionDone"
        android:background="@xml/custom_edit_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"
        android:typeface="sans"
        android:textSize="20dp" />

    <AutoCompleteTextView
        android:id="@+id/name_product"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/brown"
        android:completionThreshold="1"
        android:imeOptions="actionDone"
        android:background="@xml/custom_edit_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"
        android:textSize="20dp"
        android:typeface="sans" />
    
    <AutoCompleteTextView
        android:id="@+id/color_product"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/color"
        android:completionThreshold="1"
        android:textColor="@color/brown"
        android:imeOptions="actionDone"
        android:background="@xml/custom_edit_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"
        android:textSize="20dp"
        android:typeface="sans" />
    
    <EditText
        android:id="@+id/quantity_product"
       android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/quantity"
        android:completionThreshold="1"
        android:imeOptions="actionDone"
        android:textColor="@color/brown"
        android:background="@xml/custom_edit_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"
        android:textSize="20dp"
        android:typeface="sans" />
    
	<CheckBox
        android:id="@+id/accept_product"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:onClick="AcceptToShopItemOnClickHandler"
        android:button="@xml/custom_checkbox"/>

	<ImageButton
	    android:id="@+id/removeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:contentDescription="@string/app_name"
	    android:onClick="removeToShopItemOnClickHandler"
	    android:src="@android:drawable/ic_menu_delete" />

</LinearLayout>